# XFileTransit

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/driver/interface/: NetworkInterface.h  PlatformSocket.h
src/include/model/: FileListModel.h
src/res/logo/: RCa23484  logo.rc
src/source/driver/: CMakeLists.txt
src/source/driver/impl/FileSyncEngine/: FileMsgBuilder.cpp
src/source/model/: CMakeLists.txt  NetworkInfoModel.cpp
